--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
     "animate.css": "^4.1.1",
+    "gsap": "^3.10.4",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "typescript": "^4.6.4",
