--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -19,6 +19,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vue-tsc": "^0.38.4"
