--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.11.1",
     "vite": "^3.0.0",
     "vue-tsc": "^0.38.4"
   }
